turtleart.lessons.turtleart.Main.CircleTwo.scala.error
Source:18: error: Unmatched closing brace '}' ignored here
}
^