turtleart.lessons.turtleart.Main.CircleTwo.scala.code
override def run() 
{

	for (n<-1 to 360)
	{
		avance(1)
		droite(1)
	}
	for (n<-1 to 360)
		avance(2)
		droite(1)
	}
	
}
